--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,6 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/nav_graph">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/nav_graph"
+    app:startDestination="@id/homeFragment">
 
+    <fragment
+        android:id="@+id/homeFragment"
+        android:name="com.example.noteapp.fragment.HomeFragment"
+        android:label="fragment_home"
+        tools:layout="@layout/fragment_home" />
+    <fragment
+        android:id="@+id/createNoteFragment"
+        android:name="com.example.noteapp.fragment.CreateNoteFragment"
+        android:label="fragment_create_note"
+        tools:layout="@layout/fragment_create_note" />
+    <fragment
+        android:id="@+id/garbageFragment"
+        android:name="com.example.noteapp.fragment.GarbageFragment"
+        android:label="fragment_garbage"
+        tools:layout="@layout/fragment_garbage" />
+    <fragment
+        android:id="@+id/doneNotesFragment"
+        android:name="com.example.noteapp.fragment.DoneNotesFragment"
+        android:label="fragment_done_notes"
+        tools:layout="@layout/fragment_done_notes" />
 </navigation>
