--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -16,10 +16,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:baselineAligned="false"
-        android:orientation="horizontal">
-
-
+        android:orientation="vertical">
         <TextView
             android:id="@+id/tvTitle"
             android:layout_width="match_parent"
@@ -57,9 +54,6 @@
             android:text="@string/dateTime"
             android:textColor="@color/ColorText"
             android:textSize="@dimen/_9sdp" />
-
-
     </LinearLayout>
-
 
 </androidx.cardview.widget.CardView>
