--- a/app/src/main/res/layout/fragment_garbage.xml
+++ b/app/src/main/res/layout/fragment_garbage.xml
@@ -20,6 +20,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
     <ImageView
+        android:id="@+id/ivMore"
         android:layout_width="@dimen/_24sdp"
         android:layout_height="@dimen/_24sdp"
         android:src="@drawable/ic_more_vert"
